--- a/src/raw/.htaccess
+++ b/src/raw/.htaccess
@@ -1,8 +1,5 @@
-Options +FollowSymLinks -MultiViews -Indexes
-
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME}.htm -f
-RewriteRule ^(.+)$ $1.htm [NC,L,QSA]
+RewriteRule ^(.*)$ $1.htm [NC,L]
 
 RedirectMatch 404 /\.git
